# unihack3-13

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  security_best_practices_report.md  vitest.config.ts
.github/workflows/: ci.yml
agentic-workflow/: .env.example  .gitignore  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  ubuntu_auto_ops_agent.spec
agentic-workflow/.agents/workflows/: ubuntu_auto_ops.md
agentic-workflow/deploy/: agentic-workflow.service  setup-vm.sh
agentic-workflow/scripts/: bootstrap_index.py  load_demo_data.py  run_chat.py
agentic-workflow/src/agentic_workflow_agent/: __init__.py  cli.py  config.py  schemas.py  tracing.py
agentic-workflow/src/agentic_workflow_agent/agent/: __init__.py  loop.py  prompts.py  safe_ops.py  tools.py
agentic-workflow/src/agentic_workflow_agent/elastic/: __init__.py  embeddings.py  es_client.py  indexing.py  search.py
agentic-workflow/src/agentic_workflow_agent/kibana/: __init__.py  agent_builder.py
agentic-workflow/src/agentic_workflow_agent/llm/: __init__.py  client.py
agentic-workflow/src/agentic_workflow_agent/workflow/: __init__.py  models.py  runner.py
agentic-workflow/tests/: conftest.py
agentic-workflow/tests/unit/: test_agent_loop.py  test_cli.py  test_config.py  test_es_client.py  test_safe_ops.py  test_search.py  test_tools.py  test_workflow_runner.py
agentic-workflow/workflows/: ubuntu_auto_ops.yaml
apps/api/: README.md  eval-hazard.ts  next.config.ts  package.json  test-gateway.ts
apps/api/scripts/: knowledge-index.mjs
apps/api/src/data/: rental-knowledge.json
apps/api/src/lib/: ai.test.ts  (+9 more)
apps/web/: README.md  next.config.ts  package.json
scripts/: deploy-vps.sh
tests/e2e/: compare-smoke.spec.ts  demo-smoke.spec.ts  manual-smoke.spec.ts
(+113 files in other folders)
